# BlogDemo

FFmpegPushStreamDemo/app/: CMakeLists.txt  build.gradle
FFmpegPushStreamDemo/app/src/androidTest/java/me/solidev/ffmpegpushstreamdemo/: ExampleInstrumentedTest.java
FFmpegPushStreamDemo/app/src/main/: AndroidManifest.xml
FFmpegPushStreamDemo/app/src/main/cpp/: me_solidev_ffmpegpushstreamdemo_FFmpegPushStream.c  native-lib.cpp
FFmpegPushStreamDemo/app/src/main/java/me/solidev/ffmpegpushstreamdemo/: FFmpegPushStream.java  MainActivity.java
FFmpegPushStreamDemo/app/src/main/res/layout/: activity_main.xml
FFmpegPushStreamDemo/app/src/main/res/values/: strings.xml
FFmpegPushStreamDemo/app/src/test/java/me/solidev/ffmpegpushstreamdemo/: ExampleUnitTest.java
FFmpegPushStreamDemo/gradle/wrapper/: gradle-wrapper.properties
FFmpegStartDemoForAndroid/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
FFmpegStartDemoForAndroid/app/src/main/: AndroidManifest.xml
FFmpegStartDemoForAndroid/app/src/main/cpp/: solid_ren_ffmpeg_FFmpegInfo.c  solid_ren_ffmpeg_FFmpegInfo.h
FFmpegStartDemoForAndroid/app/src/main/java/solid/ren/ffmpeg/: FFmpegInfo.java
FFmpegStartDemoForAndroid/app/src/main/res/layout/: activity_main.xml
FFmpegStartDemoForAndroid/app/src/test/java/solid/ren/ffmpeg/: ExampleUnitTest.java
FFmpegStartDemoForAndroid/gradle/wrapper/: gradle-wrapper.properties
FFmpegStatDemoForAndroid/app/src/androidTest/java/solid/ren/ffmpeg/: ExampleInstrumentedTest.java
FFmpegStatDemoForAndroid/app/src/main/java/solid/ren/ffmpeg/: MainActivity.java
